# time-series-at-home

./: Cargo.toml  README.md
src/: main.rs
src/http/: endpoints.rs  mod.rs  response.rs  server.rs
src/parquet/: generator.rs  mod.rs  reader.rs  writer.rs
