[package]
name = "time-series-at-home"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arrow = "55.1.0"
parquet = "55.1.0"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
arrow-schema = "55.1.0"
anyhow = "1.0.98"
